contact page has been created

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
 
 /* Menu page */
 .MenuBanner{
-  background-image: url("./assets/menu/menu-bg.jpg");
+  background-image: url("./assets/banner/contact1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
